module8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: tomcat.cnsre.cn
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: tomcat-service
                port:
                  number: 8080
